Adjust paint invalidation rects to match the actual radius of rastered blur.

Skia actually renders to a larger radius than just blur().

BUG=648963,624175

Review-Url: https://codereview.chromium.org/2356213004
Cr-Commit-Position: refs/heads/master@{#420570}