third_party/WebKit/Source/core/style/ShadowData.h
@@ -29,6 +29,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "core/css/StyleColor.h"
 #include "platform/geometry/FloatPoint.h"
 #include "platform/geometry/FloatRectOutsets.h"
+#include "platform/graphics/skia/SkiaUtils.h"
 
 namespace blink {
 
@@ -64,7 +65,9 @@ public:
     // shadow.
     FloatRectOutsets rectOutsets() const
     {
-        float blurAndSpread = blur() + spread();
+        // 3 * skBlurRadiusToSigma(blur()) is how Skia implements the radius of a blur. See also
+        // https://crbug.com/624175.
+        float blurAndSpread = ceil(3 * skBlurRadiusToSigma(blur())) + spread();
         return FloatRectOutsets(
             blurAndSpread - y() /* top */,
             blurAndSpread + x() /* right */,
